--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@
     /* Chrome < 4, Legacy iOS */
 }
 
+@font-face {
+    font-family: 'YS Display';
+    src: url('../fonts/YS Display Regular Regular.woff');
+}
+
 .vidget-fixed__items {
     position: fixed;
     right: 0;
@@ -259,6 +264,10 @@ html {
     line-height: 25px;
     color: #13345E;
     margin-bottom: 15px;
+}
+
+.swiper {
+    display: none;
 }
 
 .opportunities__card__left p {
@@ -1012,6 +1021,40 @@ html {
     background-color: #f3fcff;
 }
 
+.about__link__container {
+    display: flex;
+    text-decoration: none;
+}
+
+.about__link__container img {
+    width: 70px;
+    height: 70px;
+    margin-right: 5px;
+}
+
+.about__link__container div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 120px;
+}
+
+.about__link__container div p {
+    font-size: 14px;
+    color: #000;
+    font-weight: 400;
+    line-height: 16px;
+    margin: 0;
+    font-family: 'YS Display', sans-serif;
+}
+
+.about__link__container div p:not(:last-child) {
+    font-size: 22px;
+    color: #000;
+    font-weight: 500;
+    line-height: 24px;
+}
+
 .about__container {
     max-width: 1200px;
     margin: auto;
@@ -1023,8 +1066,8 @@ html {
 .about__title {
     font-family: 'Manrope';
     font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
+    font-weight: 700;
+    font-size: 25px;
     line-height: 25px;
     color: #13345E;
     margin: 0;
@@ -1070,29 +1113,27 @@ html {
     margin-bottom: 0;
 }
 
-.about__achievements {
-    display: grid;
-    grid-template-columns: 1fr 0.3fr;
-}
-
 .partners__logo {
-    filter: grayscale(1);
     display: block;
     object-fit: contain;
     margin-right: 20px;
     padding: 20px;
+    padding-left: 0;
 }
 
 .about__achievements__right {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: start;
+    max-width: 900px;
 }
 
 .about__achievements__left {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 70px;
+    margin-bottom: 60px;
+    max-width: 900px;
 }
 
 .partners__item {
@@ -1102,15 +1143,6 @@ html {
     align-items: center;
     transition: 0.1s;
     justify-content: space-around;
-}
-
-.partners__item:hover img {
-    transition: 0.2s;
-    filter: grayscale(0);
-}
-
-.partners__tooltip:hover {
-    visibility: visible;
 }
 
 .partners__tooltip {
@@ -1290,6 +1322,19 @@ html {
 
 @media(max-width: 1200px) {
 
+    .about__link__container {
+        margin: auto;
+    }
+
+    .about__achievements__right {
+        margin: auto;
+    }
+
+    .about__achievements__left {
+        margin: auto;
+        margin-bottom: 60px;
+    }
+
     .about__title {
         text-align: center;
     }
@@ -1303,6 +1348,18 @@ html {
         margin: auto;
         margin-bottom: 55px;
         max-width: 90%;
+    }
+
+    .progress__title {
+        text-align: center;
+    }
+
+    .partners__item {
+        margin: auto;
+    }
+
+    .partners__logo {
+        padding: 20px;
     }
 }
 
@@ -1335,10 +1392,6 @@ html {
         text-align: center;
     }
 
-    .about__achievements__right {
-        flex-direction: row;
-    }
-
     .about__achievements {
         grid-template-columns: 1fr;
     }
@@ -1359,7 +1412,7 @@ html {
         max-width: 500px;
     }
 
-    .progress__tile {
+    .progress__title {
         margin: auto;
     }
 
@@ -1465,17 +1518,45 @@ html {
 
 @media(max-width: 768px) {
 
+    
+    .swiper-button-next::after {
+        background-color: transparent;
+        background-image: url(../img/rectangle.svg);
+        background-repeat: no-repeat;
+        width: 45px;
+        height: 40px;
+        display: block;
+        background-size: 30px 40px;
+        content: '';
+    }
+
+    .swiper-button-prev::after {
+        background-color: transparent;
+        background-image: url(../img/rectangle.svg);
+        background-repeat: no-repeat;
+        width: 45px;
+        height: 40px;
+        display: block;
+        background-size: 30px 40px;
+        content: '';
+        transform: rotate(180deg);
+    }
+
+    .swiper__button__container {
+        width: 30%;
+        position: relative;
+        margin: auto;
+        margin-top: 40px;
+    }
+
+    .swiper {
+        display: block;
+        width: 100%;
+        padding-bottom: 80px;
+    }
+
     .partners__tooltip::after {
         border: none;
-    }
-
-    .progress__value {
-        font-size: 48px;
-        margin-bottom: 20px;
-    }
-
-    .progress__text {
-        font-size: 16px;
     }
 
     .vidget-fixed__items {
@@ -1483,7 +1564,7 @@ html {
     }
 
     .about__achievements__left {
-        grid-template-columns: 1fr;
+        display: none;
     }
 
     .about__title {
@@ -1502,7 +1583,7 @@ html {
     }
 
     .about__achievements__right {
-        flex-direction: column;
+        grid-template-columns: 1fr;
     }
 
     .partners__tooltip {
@@ -1520,7 +1601,7 @@ html {
 
     .partners__logo {
         margin-bottom: 15px;
-        filter: none;
+        margin-right: 0;
     }
 
     .partners__item {
@@ -1772,9 +1853,14 @@ html {
 
 @media(max-width: 425px) {
 
+    .about__slogan {
+        max-width: 425px;
+    }
+
     .about__container {
         padding-left: 15px;
         padding-right: 15px;
+        padding-bottom: 90px;
     }
 
     .mockups__desktop {
